syntax = "proto3";

package passwordReset;

import "google/protobuf/timestamp.proto";

message PasswordReset {
  string id = 1;
  string token = 2;
  google.protobuf.Timestamp expiredAt = 3;
  google.protobuf.Timestamp verifiedAt = 4;
  User user = 5;
}

message User {
  string id = 1;
}
message Id {
  string id = 1;
}
message CreateRequest {
  string userId = 1;
  string token = 2;
}
message GetByTokenRequest {
  string token = 1;
}

service PasswordResetService {
  rpc Create(CreateRequest) returns (PasswordReset) {}
  rpc GetByToken(GetByTokenRequest) returns (PasswordReset) {}
  rpc Verify(Id) returns (PasswordReset) {}
}

// protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./ --ts_proto_opt=nestJs=true ./proto/passwordReset.proto